feat(controller): add dto for view fines details on table.